Bookmarks: Make fixed width and text wrap on link buttons
(reference #30 )

--- a/Super.Human.Portal_Royale/src/resources/app-styles.css
+++ b/Super.Human.Portal_Royale/src/resources/app-styles.css
@@ -457,3 +457,7 @@ a:hover {
   padding-left: 25px;
   padding-right: 25px;
 }
+
+.jewel.button.primary.linkAppButton {
+	textWrap: wrap;
+}
